# Face-Checkin-System

./: README.md  app.py  main.py  pyproject.toml
src/: config.py  dataset.py  embeddings.py  index_builder.py  search.py  utils.py
